Added External Library Integration - Typed.js

--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <title>Amber Forrest's Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
     <header>
         <h1>Amber Forrest</h1>
-  
+        
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
@@ -19,6 +20,9 @@
             </ul>
         </nav>
        
+        <br>
+        <h1><span id="intro"></span></h1>
+
     </header>
 
     <section id="about">
