Updating CSS for project section

--- a/index.html
+++ b/index.html
@@ -63,51 +63,61 @@
 
     <section id="projects">
         <h2>My Projects</h2>
+        <div class="projects">
+            <h3>Album Art App</h3>
+            <img src="albumAppPhoto.png" alt="This is a picture of the album art app assignment" width="20%">
+            <br>
+            <button class="detailsButton">Show Details</button>
+                <div class="project-details" style="display: none;">
+                    <p>This project is a group assignment created in my Web Programing Class at Humber College. 
+                        Album Art App is an interactive website that lets users create parody album covers featuring themselves. 
+                        It is designed similarly to a photobooth (a countdown, capture, and then final result at the end). 
+                        The Gallery page acts as a personal collection of the user's creations where the user can download the image, 
+                        copy the image, share the image using the Web Share API on mobile devices and/or delete the image from local storage.
+                        <br><br>
+                        GitHub Repository Link: <a href="https://github.com/erinhollett/album-art-app">Album Art App Repository</a>
+                        <br>Live HTML Link: <a href="https://erinhollett.github.io/album-art-app/">Album Art App HTML</a>
+                        <br><br>
+                    </p>
+                </div>
+        </div>
 
-        <h3>Album Art App</h3>
-        <img src="albumAppPhoto.png" alt="This is a picture of the ablum art app assignment" width="20%">
-        <br>
-        <button class="detailsButton">Show Details</button>
-            <div class="project-details" style="display: none;">
-                <p>This project is a group assignment created in my Web Programing Class at Humber College. 
-                    Album Art App is an interactive website that lets users create parody album covers featuring themselves. 
-                    It is designed similarly to a photobooth (a countdown, capture, and then final result at the end). 
-                    The Gallery page acts as a personal collection of the user's creations where the user can download the image, 
-                    copy the image, share the image using the Web Share API on mobile devices and/or delete the image from local storage.
-                    <br><br>
-                    Click on the link to view the project: <a href="https://erinhollett.github.io/album-art-app/">Album Art App</a>
-                    <br><br>
-                </p>
-            </div>
-
-        <h3>Web Storage Project</h3>
-        <img src="storageAssignmentPhoto.png" alt="This is a picture of the storage assignment" width="20%">
-        <br>
-        <button class="detailsButton">Show Details</button>
-            <div class="project-details" style="display: none;">
-                <p>This assignment was created in my Web Programing Class at Humber College. 
-                    I created a simple web page that allows users to input their name, 
-                    save it locally using the HTML5 Web Storage API, and retrieve it whenever they visit the page.
-                    I also added a feature to display a welcome message based on the time of day.
-                    <br><br>
-                    Click on the link to view the project: <a href="https://amber4est.github.io/Web-Storage-Assignment2/">Web Storage Assignment</a>
-                    <br><br>
-                </p>
-            </div>
-
-        <h3>Dynamic Blog Website</h3>
-        <img src="dynamicBlogPhoto.png" alt="This is a picture of the dynamic blog website project" width="20%">
-        <br>
-        <button class="detailsButton">Show Details</button>
-            <div class="project-details" style="display: none;">
-                <p>This project was an assignment in my Web Programming Class at Humber College. 
-                    In this project, I created a blog website with a homepage that displays a list of blog posts, 
-                    a page to create new posts, and the ability to edit or delete existing posts using JavaScript local storage.
-                    <br><br>
-                    Click on the link to view the project: <a href="https://amber4est.github.io/dynamic-blog-website/">Dynamic Blog Assignment</a>
-                    <br><br>
-                </p>
-            </div>
+        <div class="projects">
+            <br><br>
+            <h3>Web Storage Project</h3>
+            <img src="storageAssignmentPhoto.png" alt="This is a picture of the web storage project" width="20%">
+            <br>
+            <button class="detailsButton">Show Details</button>
+                <div class="project-details" style="display: none;">
+                    <p>This assignment was created in my Web Programing Class at Humber College. 
+                        I created a simple web page that allows users to input their name, 
+                        save it locally using the HTML5 Web Storage API, and retrieve it whenever they visit the page.
+                        I also added a feature to display a welcome message based on the time of day.
+                        <br><br>
+                        GitHub Repository Link: <a href="https://github.com/amber4est/Web-Storage-Assignment2">Web Storage Assignment Repository</a>
+                        <br>Live HTML Link: <a href="https://amber4est.github.io/Web-Storage-Assignment2/">Web Storage Assignment Website</a>
+                        <br><br>
+                    </p>
+                </div>
+        </div>
+        
+        <div class="projects">
+            <br><br>
+            <h3>Dynamic Blog Website</h3>
+            <img src="dynamicBlogPhoto.png" alt="This is a picture of the dynamic blog website project" width="20%">
+            <br>
+            <button class="detailsButton">Show Details</button>
+                <div class="project-details" style="display: none;">
+                    <p>This project was an assignment in my Web Programming Class at Humber College. 
+                        In this project, I created a blog website with a homepage that displays a list of blog posts, 
+                        a page to create new posts, and the ability to edit or delete existing posts using JavaScript local storage.
+                        <br><br>
+                        GitHub Repository Link: <a href="https://github.com/amber4est/dynamic-blog-website">Dynamic Blog Assignment Repository</a>
+                        <br>Live HTML Link: <a href="https://amber4est.github.io/dynamic-blog-website/">Dynamic Blog Assignment Website</a>
+                        <br><br>
+                    </p>
+                </div>
+        </div>
     </section>
 
     <section id="contact">
