Added a Contact Me Form Button in the contact section

--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
         <p>Github: <a href="https://github.com/amber4est">amber4est</a></p>
         <br>
 
-        <form action="#" class="contactForm" id="contactForm">
+        <button id="showFormButton">Contact Me Form</button>
+        <form action="#" class="contactForm" id="contactForm" style="display: none;">
             <h3>Send me a message:</h3>
 
             <label for="name">Name:</label><br>
@@ -149,7 +150,7 @@
             <p id="successMessage" class="success"></p>
         </form>
     </section>
-   
+   <br><br>
     <footer>
         <p>© Amber Forrest, 2025</p>
     </footer>
