Adding a filter section to the projects section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,15 @@
 
     <section id="projects">
         <h2>My Projects</h2>
-        <div class="projects">
+
+        <div class="filterButtons">
+            <button class="filterButton">All</button>
+            <button class="filterButton">HTML</button>
+            <button class="filterButton">JavaScript</button>
+            <button class="filterButton">CSS</button>
+        </div>
+
+        <div class="projects HTML">
             <h3>Album Art App</h3>
             <img src="albumAppPhoto.png" alt="This is a picture of the album art app assignment" width="20%">
             <br>
@@ -82,7 +90,7 @@
                 </div>
         </div>
 
-        <div class="projects">
+        <div class="projects JavaScript">
             <br><br>
             <h3>Web Storage Project</h3>
             <img src="storageAssignmentPhoto.png" alt="This is a picture of the web storage project" width="20%">
@@ -101,7 +109,7 @@
                 </div>
         </div>
         
-        <div class="projects">
+        <div class="projects CSS">
             <br><br>
             <h3>Dynamic Blog Website</h3>
             <img src="dynamicBlogPhoto.png" alt="This is a picture of the dynamic blog website project" width="20%">
