Adding a Skills section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About Me</a></li>
+                <li><a href="#skills">My Skills</a></li>
                 <li><a href="#projects">My Projects</a></li>
                 <li><a href="#contact">Contact Me</a></li>
             </ul>
@@ -59,6 +60,11 @@
         </div>
     
     </div>    
+    </section>
+
+    <section id="skills">
+        <h2>My Skills</h2>
+    
     </section>
 
     <section id="projects">
