Adding CSS styling to Skills with animation/keyframes

--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
 
     <section id="skills">
         <h2>My Skills</h2>
-    
+        <div class="skills">
+            <span class="skill">HTML</span>
+            <span class="skill">CSS</span>
+            <span class="skill">JavaScript</span>
+            <span class="skill">Java</span>
+            <span class="skill">Python</span>
+        </div>
+        
     </section>
 
     <section id="projects">
