Adding a note comment in HTML

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 
     <section id="projects">
         <h2>My Projects</h2>
-
+        <!-- !!!!!!!!!!!!!!!!!
+         PLEASE NOTE:
+         --All projects use HTML, JS, and CSS--
+         but to show that the filter buttons work, I added each project in a seperate filter category
+         !!!!!!!!!!!!!!!!!!!!!-->
         <div class="filterButtons">
             <button class="filterButton">All</button>
             <button class="filterButton">HTML</button>
