Added a dark mode/light mode button and changed CSS to match

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <button id="darkMode">Dark Mode</button>
         <h1>Amber Forrest</h1>
         
         <nav>
