--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amber Forrest's Portfolio</title>
     <link rel="stylesheet" href="styles.min.css">
-    <script src="script.js" defer></script>
+    <script src="script.min.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 </head>
 <body>
