Adding lazy loading in images and audio in HTML

--- a/index.html
+++ b/index.html
@@ -39,22 +39,22 @@
             <br>
 
             <h3>Here is an audio that I like:</h3>
-            <audio controls>
+            <audio controls preload="none">
                 <source src="audioExample.wav" type="audio/wav">
                 Your browser does not support the audio element.
             </audio>
         </div>
             
         <div class="slides">
-            <div class="slide"><img src="baileyPhoto.jpg" alt="Slide 1"></div>
-            <div class="slide"><img src="naturePhoto.jpg" alt="Slide 2"></div>
-            <div class="slide"><img src="sunsetPhoto.jpg" alt="Slide 3"></div>
-            <div class="slide"><img src="petPhoto.jpg" alt="Slide 4"></div>
-            <div class="slide"><img src="theoPhoto.jpg" alt="Slide 5"></div>
-            <div class="slide"><img src="waterfallPhoto.jpg" alt="Slide 6"></div>
-            <div class="slide"><img src="waterPhoto.jpg" alt="Slide 7"></div>
-            <div class="slide"><img src="willowAndTheoPhoto.jpg" alt="Slide 8"></div>
-            <div class="slide"><img src="willowPhoto.jpg" alt="Slide 9"></div>
+            <div class="slide"><img src="baileyPhoto.jpg" alt="Slide 1" loading="lazy"></div>
+            <div class="slide"><img src="naturePhoto.jpg" alt="Slide 2" loading="lazy"></div>
+            <div class="slide"><img src="sunsetPhoto.jpg" alt="Slide 3" loading="lazy"></div>
+            <div class="slide"><img src="petPhoto.jpg" alt="Slide 4" loading="lazy"></div>
+            <div class="slide"><img src="theoPhoto.jpg" alt="Slide 5" loading="lazy"></div>
+            <div class="slide"><img src="waterfallPhoto.jpg" alt="Slide 6" loading="lazy"></div>
+            <div class="slide"><img src="waterPhoto.jpg" alt="Slide 7" loading="lazy"></div>
+            <div class="slide"><img src="willowAndTheoPhoto.jpg" alt="Slide 8" loading="lazy"></div>
+            <div class="slide"><img src="willowPhoto.jpg" alt="Slide 9" loading="lazy"></div>
 
             <a class="next">></a>
             <a class="previous"><</a>
@@ -91,7 +91,7 @@
 
         <div class="projects HTML">
             <h3>Album Art App</h3>
-            <img src="albumAppPhoto.png" alt="This is a picture of the album art app assignment" width="20%">
+            <img src="albumAppPhoto.png" alt="This is a picture of the album art app assignment" width="20%" loading="lazy">
             <br>
             <button class="detailsButton">Show Details</button>
                 <div class="project-details" style="display: none;">
@@ -111,7 +111,7 @@
         <div class="projects JavaScript">
             <br><br>
             <h3>Web Storage Project</h3>
-            <img src="storageAssignmentPhoto.png" alt="This is a picture of the web storage project" width="20%">
+            <img src="storageAssignmentPhoto.png" alt="This is a picture of the web storage project" width="20%" loading="lazy">
             <br>
             <button class="detailsButton">Show Details</button>
                 <div class="project-details" style="display: none;">
@@ -130,7 +130,7 @@
         <div class="projects CSS">
             <br><br>
             <h3>Dynamic Blog Website</h3>
-            <img src="dynamicBlogPhoto.png" alt="This is a picture of the dynamic blog website project" width="20%">
+            <img src="dynamicBlogPhoto.png" alt="This is a picture of the dynamic blog website project" width="20%" loading="lazy">
             <br>
             <button class="detailsButton">Show Details</button>
                 <div class="project-details" style="display: none;">
