Adding last updated in footer

--- a/index.html
+++ b/index.html
@@ -177,8 +177,9 @@
         </form>
     </section>
    <br><br>
+   
     <footer>
-        <p>© Amber Forrest, 2025</p>
+        <p>© Amber Forrest, 2025. <span id="lastUpdatedDate"></span></p>
     </footer>
 
 </body>
